--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookswap",
+  "name": "swap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,8 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.1.0",
+    "element-ui": "^2.15.1",
+    "node-sass": "^4.14.1",
+    "qs": "^6.10.1",
+    "sass-loader": "^8.0.2",
+    "style-resources-loader": "^1.4.1",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.24.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -17,6 +25,8 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-plugin-component": "^1.1.1",
+    "vue-cli-plugin-style-resources-loader": "^0.1.5",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
