--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.6.11",
     "vue-i18n": "^8.24.3",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "web3": "^1.3.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
