--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@drizzle/store": "^1.5.3",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.1.0",
